aggiunti esercizi, neanche avviati e quindi testati, da finire, provare e sistemare

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,22 @@ project(SASSARO_ManiglioEIlPiuBelloDelMondo C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(SASSARO_ManiglioEIlPiuBelloDelMondo main.c
+add_executable(SASSARO_ManiglioEIlPiuBelloDelMondo
+        main.c
+        EsercizioUno.c
+        EsercizioDue.c
+        EsercizioTre.c
         EsercizioQuattro.c
+        EsercizioCinque.c
+        EsercizioCinque.h
+        EsercizioSei.c
+        EsercizioSei.h
+        EsercizioSette.c
+        EsercizioSette.h
+        EsercizioOtto.c
+        EsercizioOtto.h
+        EsercizioNove.c
+        EsercizioNove.h
+        EsercizioDieci.c
+        EsercizioDieci.h
 )
